# Changelog

## Version  3.4.0

* Adding HDR10+ support for x265
* Adding x265 params hdr10, hdr10-opt, aq-mode and repeat-headers
* Fixing #103 x265-params were being pre-pended with an extra ":"
* Fixing #101 FFmpeg status codes now taken into account for errors

## Version  3.3.1

* Fixing #96 input selection did not support all video formats
* Fixing #95 unicode decode error for FFmpeg output

## Version  3.3.0

* Adding ETA and size estimates on status panel
* Adding custom x265-params options
* Adding support for WebP encodings
* Changing height to say "Auto" when keeping aspect ratio
* Changing that buttons will be disabled without video or when encoding
* Fixing cover extraction could timeout and crash program
* Fixing #89 x265 params for hdr10 changed names (thanks to SlashX)
* Fixing #92 cannot start FastFlix on Mac (thanks to Paul Bakaus)
* Fixing autocrop sometimes failing due to muxing size limitations
* Fixing thumbnail generation did not work for videos with multiple video tracks
* Fixing gif generation to work with new filter_complex
* Fixing gif output network location would not work

## Version  3.2.1

* Fixing #87 psutil not listed as requirement for pip (thanks to I-Iawk)

## Version  3.2.0

* Adding #75 burn-in subtitle support (thanks to Trevbams)
* Adding #81 auto crop feature (thanks to HannesJo0139)
* Adding #84 pause / resume functionality (thanks to loungebob)
* Adding hover info for Audio and Subtitle tracks
* Adding confirm overwrite dialog if file already exists and is not empty
* Adding linking to issues in changelog file
* Changing to explicitly set no-slow-firstpass for x265 bitrate runs
* Changing FFmpeg to download latest available
* Fixing AVC always copied chapters
* Fixing how aspect ratio interacted with crop
* Fixing HEVC would copy HDR10 details on 8-bit videos

## Version  3.1.0

* Adding support for movie title
* Adding settings for disable update check on startup and limited audio conversions